--- a/ws_server/config/sys.config
+++ b/ws_server/config/sys.config
@@ -1,3 +1,18 @@
 [
-  { ws_server, []}
+{kernel, [
+	{logger, [
+		{handler, default, logger_std_h, #{
+							level => error,
+							config => #{type => {file, "log/erlang.log"}},
+							formatter => {logger_formatter, #{
+									template => [time," ",pid," ",msg,"\n"],
+									single_line => true}}
+						  }},
+		{handler, info, logger_std_h, #{
+                      level => debug,
+                      config => #{type => {file, "log/debug.log"}}
+                      }}
+	]}
+]},
+{ ws_server, []}
 ].
