--- a/ws_server/config/sys.config
+++ b/ws_server/config/sys.config
@@ -1,18 +1,32 @@
 [
 {kernel, [
-	{logger, [
-		{handler, default, logger_std_h, #{
-							level => error,
-							config => #{type => {file, "log/erlang.log"}},
-							formatter => {logger_formatter, #{
-									template => [time," ",pid," ",msg,"\n"],
-									single_line => true}}
-						  }},
-		{handler, info, logger_std_h, #{
-                      level => debug,
-                      config => #{type => {file, "log/debug.log"}}
-                      }}
-	]}
-]},
+    {logger, [
+        {handler, info, logger_std_h, #{
+                               level  => error,
+                               config => #{
+                                     type                        => {file, "log/erlang.log"},
+                                     sync_mode_qlen              => 100,
+                                     drop_mode_qlen              => 1000,
+                                     flush_qlen                  => 20000,
+                                     burst_limit_enable          => true,
+                                     burst_limit_max_count       => 20,
+                                     burst_limit_window_time     => 500,
+                                     overload_kill_enable        => false,
+                                     overload_kill_qlen          => 20000,
+                                     overload_kill_mem_size      => 3000000,
+                                     overload_kill_restart_after => 5000
+                                 },
+                                 formatter => {logger_formatter, #{
+                                     template    => [time, " ", level,": ",pid," ",msg,"\n"],
+                                     single_line => true}}
+                           }},
+        {handler, default, logger_std_h, #{
+                                  level  => debug,
+                                  config => #{
+                                         type => {file, "log/debug.log"}
+                                         }
+                              }}
+        ]}
+    ]},
 { ws_server, []}
 ].
