--- a/ws_server/rebar.config
+++ b/ws_server/rebar.config
@@ -1,6 +1,7 @@
 {erl_opts, [debug_info]}.
 {deps, [
-       {cowboy, "2.5.0"}
+       {cowboy, "2.5.0"},
+       {jiffy, "0.15.2"}
 ]}.
 
 {relx, [{release, { ws_server, "0.1.0" },
