--- a/ws_server/rebar.config
+++ b/ws_server/rebar.config
@@ -1,13 +1,18 @@
+{minimum_otp_vsn, "21.1.2"}.
+
 {erl_opts, [debug_info]}.
 {deps, [
        {cowboy, "2.5.0"},
-       {jiffy, "0.15.2"}
+       {jiffy, "0.15.2"},
+       {brod, "3.7.2"}
 ]}.
 
 {relx, [{release, { ws_server, "0.1.0" },
          [ws_server,
           sasl,
-          cowboy]},
+          cowboy,
+          jiffy,
+          brod]},
 
         {sys_config, "./config/sys.config"},
         {vm_args, "./config/vm.args"},
