--- a/ws_server/rebar.config
+++ b/ws_server/rebar.config
@@ -2,10 +2,10 @@
 
 {erl_opts, [debug_info]}.
 {deps, [
-       {cowboy, "2.5.0"},
-       {jiffy, "0.15.2"},
-       {brod, "3.7.2"},
-       {erlastic_search, "1.3.0"}
+       cowboy,
+       jiffy,
+       brod,
+       erlastic_search
 ]}.
 
 {relx, [{release, { ws_server, "0.1.0" },
