--- a/ws_client/rebar.config
+++ b/ws_client/rebar.config
@@ -1,23 +1,29 @@
 {erl_opts, [debug_info]}.
-{deps, [
-       gun
+{deps, [gun
 ]}.
 
 {relx, [{release, { ws_client, "0.1.0" },
-         [ws_client,
-          sasl,
-          gun]},
+    [ws_client,
+    sasl,
+    gun]},
 
-        {sys_config, "./config/sys.config"},
-        {vm_args, "./config/vm.args"},
+    {sys_config, "./config/sys.config"},
+    {vm_args, "./config/vm.args"},
 
-        {dev_mode, true},
-        {include_erts, false},
+    {dev_mode, true},
+    {include_erts, false},
 
-        {extended_start_script, true}]
+    {extended_start_script, true}]
 }.
 
 {profiles, [{prod, [{relx, [{dev_mode, false},
-                            {include_erts, true}]}]
-            }]
+    {include_erts, true}]}]
+        }]
 }.
+
+{xref_checks, [undefined_function_calls,
+    undefined_functions,
+    locals_not_used,
+    deprecated_function_calls,
+    deprecated_functions
+]}.
