--- a/ws_server/rebar.config
+++ b/ws_server/rebar.config
@@ -1,30 +1,36 @@
 {minimum_otp_vsn, "21.1.2"}.
 
 {erl_opts, [debug_info]}.
-{deps, [
-       cowboy,
-       jiffy,
-       brod,
-       erlastic_search
+{deps, [cowboy,
+    jiffy,
+    brod,
+    erlastic_search
 ]}.
 
 {relx, [{release, { ws_server, "0.1.0" },
-         [ws_server,
-          sasl,
-          cowboy,
-          jiffy,
-          brod]},
+    [ws_server,
+    sasl,
+    cowboy,
+    jiffy,
+    brod]},
 
-        {sys_config, "./config/sys.config"},
-        {vm_args, "./config/vm.args"},
+{sys_config, "./config/sys.config"},
+{vm_args, "./config/vm.args"},
 
-        {dev_mode, true},
-        {include_erts, false},
+{dev_mode, true},
+{include_erts, false},
 
-        {extended_start_script, true}]
+{extended_start_script, true}]
 }.
 
 {profiles, [{prod, [{relx, [{dev_mode, false},
-                            {include_erts, true}]}]
-            }]
+    {include_erts, true}]}]
+        }]
 }.
+
+{xref_checks, [undefined_function_calls,
+    undefined_functions,
+    locals_not_used,
+    deprecated_function_calls,
+    deprecated_functions
+]}.
