--- a/ws_server/config/sys.config
+++ b/ws_server/config/sys.config
@@ -1,5 +1,7 @@
 [
 {kernel, [
+    {logger_log_progress, true},
+    {logger_level, info},
     {logger, [
         {handler, info, logger_std_h, #{
                                level  => error,
