--- a/ws_server/rebar.config
+++ b/ws_server/rebar.config
@@ -4,7 +4,8 @@
 {deps, [cowboy,
     jiffy,
     brod,
-    erlastic_search
+    erlastic_search,
+    {flatlog, {git, "https://github.com/ferd/flatlog", {branch, "master"}}}
 ]}.
 
 {relx, [{release, { ws_server, "0.1.0" },
@@ -12,7 +13,8 @@
     sasl,
     cowboy,
     jiffy,
-    brod]},
+    brod
+]},
 
 {sys_config, "./config/sys.config"},
 {vm_args, "./config/vm.args"},
