--- a/ws_server/config/sys.config
+++ b/ws_server/config/sys.config
@@ -27,6 +27,19 @@
                                   config => #{
                                          type => {file, "log/debug.log"}
                                          }
+                              }},
+        {handler, disk_log, logger_disk_log_h, #{
+                                  level  => error,
+                                  config => #{
+                                         file => "log/disk_log.log",
+                                         type => wrap,
+                                         max_no_files => 10,
+                                         max_no_bytes => 52428800
+                                  },
+                                  formatter => {flatlog, #{
+                                            map_depth => 3,
+                                            term_depth => 500
+                                  }}
                               }}
         ]}
     ]},
