--- a/ws_server/rebar.config
+++ b/ws_server/rebar.config
@@ -5,6 +5,7 @@
     jiffy,
     brod,
     erlastic_search,
+    recon,
     {flatlog, {git, "https://github.com/ferd/flatlog", {branch, "master"}}}
 ]}.
 
