--- a/ws_server/rebar.config
+++ b/ws_server/rebar.config
@@ -6,7 +6,7 @@
     brod,
     erlastic_search,
     recon,
-    {flatlog, {git, "https://github.com/ferd/flatlog", {branch, "master"}}}
+    flatlog
 ]}.
 
 {relx, [{release, { ws_server, "0.1.0" },
