--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,23 +4,24 @@ on: [push]
 
 jobs:
   build:
-    name: test
+    name: copmile the source code
     # This job runs on Linux
     runs-on: ubuntu-latest
+
+    container:
+     image: erlang:22.1.3
+
     steps:
       - uses: actions/checkout@v1.0.0
-      - uses: actions/setup-elixir@v1.0.0
-        with:
-          otp-version: 22.x
       - name: download rebar3 and make
         run: |
-        wget -c https://github.com/erlang/rebar3/releases/download/3.12.0/rebar3
-        chmod +x rebar3
-        cd ws_server
-        REBAR3=../rebar3 make
-        REBAR3=../rebar3 make dialyzer
-        REBAR3=../rebar3 make xref
-        cd ../ws_client
-        REBAR3=../rebar3 make
-        REBAR3=../rebar3 make dialyzer
-        REBAR3=../rebar3 make xref
+         wget -c https://github.com/erlang/rebar3/releases/download/3.12.0/rebar3
+         chmod +x rebar3
+         cd ws_server
+         REBAR3=../rebar3 make
+         REBAR3=../rebar3 make dialyzer
+         REBAR3=../rebar3 make xref
+         cd ../ws_client
+         REBAR3=../rebar3 make
+         REBAR3=../rebar3 make dialyzer
+         REBAR3=../rebar3 make xref
