add rebar3 format

--- a/ws_client/rebar.config
+++ b/ws_client/rebar.config
@@ -4,6 +4,10 @@
 {deps, [gun
 ]}.
 
+{plugins, [rebar3_format]}.
+
+{format, [{files, ["apps/ws_client/src/*.erl"]}]}.
+
 {relx, [{release, { ws_client, "0.1.0" },
     [ws_client,
     sasl,
