--- a/ws_server/rebar.config
+++ b/ws_server/rebar.config
@@ -9,6 +9,10 @@
     flatlog
 ]}.
 
+{plugins, [rebar3_format]}.
+
+{format, [{files, ["apps/ws_server/src/*.erl"]}]}.
+
 {relx, [{release, { ws_server, "0.1.0" },
     [ws_server,
     sasl,
