test erlang/otp 22.3

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,15 +2,12 @@ version: 2
 jobs:
   build:
     docker:
-      - image: erlang:22.2.6
+      - image: erlang:22.3
     steps:
       - checkout
       - run:
-          name: download rebar3
-          command: wget -c https://github.com/erlang/rebar3/releases/download/3.13.0/rebar3 && chmod +x rebar3
-      - run:
           name: change ws_server directory, make
-          command: cd ws_server/ && REBAR3=../rebar3 make && REBAR3=../rebar3 make dialyzer && REBAR3=../rebar3 make xref
+          command: cd ws_server/ && make && make dialyzer && make xref
       - run:
           name: change ws_client directory, make
-          command: cd ws_client/ && REBAR3=../rebar3 make && REBAR3=../rebar3 make dialyzer && REBAR3=../rebar3 make xref
+          command: cd ws_client/ && make && make dialyzer && make xref
