--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,10 @@ sudo: false
 language: erlang
 
 otp_release:
-    - 22.2.6
-
-install:
-   - wget -c https://github.com/erlang/rebar3/releases/download/3.13.0/rebar3 && chmod +x rebar3
+    - 22.3
 
 script:
     - cd ws_server
-    - REBAR3=../rebar3 make && REBAR3=../rebar3 make dialyzer && REBAR3=../rebar3 make xref
+    - make && make dialyzer && make xref
     - cd ../ws_client
-    - REBAR3=../rebar3 make && REBAR3=../rebar3 make dialyzer && REBAR3=../rebar3 make xref
+    - make && make dialyzer && make xref
