--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,19 +9,17 @@ jobs:
     runs-on: ubuntu-latest
 
     container:
-     image: erlang:22.2.4
+     image: erlang:22.3
 
     steps:
       - uses: actions/checkout@v1.0.0
       - name: download rebar3 and make
         run: |
-         wget -c https://github.com/erlang/rebar3/releases/download/3.12.0/rebar3
-         chmod +x rebar3
          cd ws_server
-         REBAR3=../rebar3 make
-         REBAR3=../rebar3 make dialyzer
-         REBAR3=../rebar3 make xref
+         make
+         make dialyzer
+         make xref
          cd ../ws_client
-         REBAR3=../rebar3 make
-         REBAR3=../rebar3 make dialyzer
-         REBAR3=../rebar3 make xref
+         make
+         make dialyzer
+         make xref
