--- a/ws_server/rebar.config
+++ b/ws_server/rebar.config
@@ -2,7 +2,7 @@
 
 {erl_opts, [debug_info]}.
 {deps, [cowboy,
-    jiffy,
+    jsx,
     brod,
     erlastic_search,
     recon,
@@ -17,7 +17,7 @@
     [ws_server,
     sasl,
     cowboy,
-    jiffy,
+    jsx,
     brod
 ]},
 
