add fmt configuration

--- a/ws_server/rebar.config
+++ b/ws_server/rebar.config
@@ -12,7 +12,12 @@
 
 {plugins, [erlfmt]}.
 
-{format, [{files, ["apps/ws_server/src/*.erl"]}]}.
+
+{erlfmt, [
+    write,
+    {files, "apps/ws_server/src/*.erl"}
+]}.
+
 
 {relx, [{release, { ws_server, "0.1.0" },
     [ws_server,
