--- a/ws_client/rebar.config
+++ b/ws_client/rebar.config
@@ -6,7 +6,10 @@
 
 {plugins, [erlfmt]}.
 
-{format, [{files, ["apps/ws_client/src/*.erl"]}]}.
+{erlfmt, [
+    write,
+    {files, "apps/ws_client/src/*.erl"}
+]}.
 
 {relx, [{release, { ws_client, "0.1.0" },
     [ws_client,
